<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6F6F6">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@mipmap/common_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="112dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textColor="@color/text_FF333333"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_des"
                    android:textColor="#80333333"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="108dp"
                android:layout_height="90dp"
                android:background="@mipmap/ic_login" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/login_name_title"
            android:textColor="@color/text_FF333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/login_name_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/edt_hint_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_pwd_title"
            android:textColor="@color/text_FF333333"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/edt_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_pwd_hint"
                android:textColorHint="@color/edt_hint_color" />

            <ImageView
                android:id="@+id/img_eye"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@mipmap/pwd_eye2" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/login_forget_pwd"
            android:textColor="@color/edt_hint_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bg_blue"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login_btn_in"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/btn_border"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login_btn_register"
            android:textColor="@color/btn_bg" />
    </LinearLayout>

</FrameLayout>