<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6F6F6">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@mipmap/common_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mine_updata_mine"
                android:textColor="@color/text_FF333333"
                android:textSize="20sp" />
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="24dp"
            android:text="@string/update_info_name"
            android:textColor="@color/text_FF333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/update_info_name_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/edt_hint_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="24dp"
            android:text="@string/update_info_phone"
            android:textColor="@color/text_FF333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/update_info_phone_hint"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/edt_hint_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="24dp"
            android:text="@string/update_info_email"
            android:textColor="@color/text_FF333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/update_info_email_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/edt_hint_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/btn_bg_blue"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/update_info_btn"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>